samples/_failures_safe/1761476179_03e7ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5245da0.c: In function ‘main’:
./samples/SAFE/__tmp_b5245da0.c:153:12: error: missing terminating " character
  153 |     printf("Decompressed data
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b5245da0.c:153:5: error: expected expression at end of input
  153 |     printf("Decompressed data
      |     ^~~~~~
./samples/SAFE/__tmp_b5245da0.c:153:5: error: expected declaration or statement at end of input
